level order traversal

--- a/tree/BinaryTreeUse.ipynb
+++ b/tree/BinaryTreeUse.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "ca828dcf",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "69c852fa",
    "metadata": {},
    "outputs": [
@@ -22,7 +22,7 @@
        "binary_tree.BinaryTreeNode"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,6 +108,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d5b3426f",
+   "metadata": {},
+   "source": [
+    "# PreOrder Traversal"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 40,
    "id": "8536a45c",
@@ -162,6 +170,14 @@
    ],
    "source": [
     "preOrderRes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c5c53f75",
+   "metadata": {},
+   "source": [
+    "# PostOrder Traversal"
    ]
   },
   {
@@ -222,6 +238,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "936f9f84",
+   "metadata": {},
+   "source": [
+    "# InOrder Traversal"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 69,
    "id": "ce6206e9",
@@ -279,9 +303,259 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d477c0be",
+   "metadata": {},
+   "source": [
+    "# Level Order Traversal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "0a7b3fce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "root = BinaryTreeNode(\"Drinks\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "d8b9563b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'left': None, 'right': None, 'data': 'Drinks'}"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "root.__dict__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "f466e6ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hot = BinaryTreeNode(\"Hot\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "2e5678aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cold = BinaryTreeNode(\"Cold\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "7b762dd6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "root.left = hot\n",
+    "root.right = cold"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "d0a8cefc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'left': <binary_tree.BinaryTreeNode at 0x7ff7b1791520>,\n",
+       " 'right': <binary_tree.BinaryTreeNode at 0x7ff7b1791a60>,\n",
+       " 'data': 'Drinks'}"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "root.__dict__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "60e7b450",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hot'"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "root.left.data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "584dc1c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tea = BinaryTreeNode(\"Tea\")\n",
+    "coffee = BinaryTreeNode(\"Coffee\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "35c54ffc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coke = BinaryTreeNode(\"Coke\")\n",
+    "pepsi = BinaryTreeNode(\"Pepsi\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "996f8c48",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hot.left = tea\n",
+    "hot.right = coffee"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "33823869",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cold.left = coke\n",
+    "cold.right = pepsi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "ccdbdd0a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "levelOrderRes = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "9b62ec38",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# declaring deque. queue = deque \n",
+    "from collections import deque"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "290e3550",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def levelOrderTraversal(node):\n",
+    "    if root is None:\n",
+    "        return None\n",
+    "    queue = deque()\n",
+    "    queue.append(node)\n",
+    "    while len(queue) != 0:\n",
+    "        item = queue.popleft()\n",
+    "        levelOrderRes.append(item.data)\n",
+    "        if item.left is not None:\n",
+    "            queue.append(item.left)\n",
+    "        if item.right is not None:\n",
+    "            queue.append(item.right)\n",
+    "            \n",
+    "    return \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "bb91399c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "levelOrderTraversal(root)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "9cd2ff31",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Drinks', 'Hot', 'Cold', 'Tea', 'Coffee', 'Coke', 'Pepsi']"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "levelOrderRes"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7790690d",
+   "id": "5f06db66",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b48e837",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74b8d0b2",
    "metadata": {},
    "outputs": [],
    "source": []
