inbuild queues and ther use

--- a/tree/BinaryTreeUse.ipynb
+++ b/tree/BinaryTreeUse.ipynb
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 3,
    "id": "0a7b3fce",
    "metadata": {},
    "outputs": [],
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 4,
    "id": "d8b9563b",
    "metadata": {},
    "outputs": [
@@ -332,7 +332,7 @@
        "{'left': None, 'right': None, 'data': 'Drinks'}"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 5,
    "id": "f466e6ef",
    "metadata": {},
    "outputs": [],
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 6,
    "id": "2e5678aa",
    "metadata": {},
    "outputs": [],
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 7,
    "id": "7b762dd6",
    "metadata": {},
    "outputs": [],
@@ -374,19 +374,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 8,
    "id": "d0a8cefc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'left': <binary_tree.BinaryTreeNode at 0x7ff7b1791520>,\n",
-       " 'right': <binary_tree.BinaryTreeNode at 0x7ff7b1791a60>,\n",
+       "{'left': <binary_tree.BinaryTreeNode at 0x7f9665c2f550>,\n",
+       " 'right': <binary_tree.BinaryTreeNode at 0x7f9665c2f5e0>,\n",
        " 'data': 'Drinks'}"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 9,
    "id": "60e7b450",
    "metadata": {},
    "outputs": [
@@ -407,7 +407,7 @@
        "'Hot'"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 10,
    "id": "584dc1c9",
    "metadata": {},
    "outputs": [],
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 11,
    "id": "35c54ffc",
    "metadata": {},
    "outputs": [],
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 12,
    "id": "996f8c48",
    "metadata": {},
    "outputs": [],
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 13,
    "id": "33823869",
    "metadata": {},
    "outputs": [],
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 14,
    "id": "ccdbdd0a",
    "metadata": {},
    "outputs": [],
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 15,
    "id": "9b62ec38",
    "metadata": {},
    "outputs": [],
@@ -483,13 +483,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 16,
    "id": "290e3550",
    "metadata": {},
    "outputs": [],
    "source": [
     "def levelOrderTraversal(node):\n",
-    "    if root is None:\n",
+    "    if node is None:\n",
     "        return None\n",
     "    queue = deque()\n",
     "    queue.append(node)\n",
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 17,
    "id": "bb91399c",
    "metadata": {},
    "outputs": [],
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 18,
    "id": "9cd2ff31",
    "metadata": {},
    "outputs": [
@@ -527,7 +527,7 @@
        "['Drinks', 'Hot', 'Cold', 'Tea', 'Coffee', 'Coke', 'Pepsi']"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
