--- a/graphs/Dijkstra_Algo_ShortestPath_SSSP_weighted_graph.ipynb
+++ b/graphs/Dijkstra_Algo_ShortestPath_SSSP_weighted_graph.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "35a3e569",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "6a835ec8",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "id": "a39fe3bf",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "id": "0d606e26",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "id": "40222e89",
    "metadata": {},
    "outputs": [
@@ -67,7 +67,7 @@
        "{'Delhi', 'Goa', 'Hydrabad', 'Jaipur', 'Mumbai'}"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "id": "d08bbec0",
    "metadata": {},
    "outputs": [],
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "id": "7f1a88af",
    "metadata": {},
    "outputs": [
@@ -98,7 +98,7 @@
        "defaultdict(list, {'Jaipur': ['Mumbai']})"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "id": "bbbb9d5e",
    "metadata": {},
    "outputs": [
@@ -119,7 +119,7 @@
        "{('Jaipur', 'Mumbai'): 4}"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "id": "772d1c72",
    "metadata": {},
    "outputs": [],
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 12,
    "id": "6bbbe1cd",
    "metadata": {},
    "outputs": [
@@ -158,7 +158,7 @@
        "             'Delhi': ['Goa']})"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 13,
    "id": "f17f1dde",
    "metadata": {},
    "outputs": [
@@ -183,7 +183,7 @@
        " ('Delhi', 'Goa'): 6}"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,6 +196,114 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c05dfe8c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "561bc232",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c990d35",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "11cea695",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def my_dijkstra_algo(graph, fromNode):\n",
+    "        visited = {fromNode: 0}\n",
+    "        path = defaultdict(list)\n",
+    "        nodes = set(graph.nodes)\n",
+    "        while nodes:\n",
+    "            minNode = None\n",
+    "            for node in nodes:\n",
+    "                if node in visited:\n",
+    "                    if minNode is None:\n",
+    "                        minNode = node\n",
+    "                    elif visited[node] < visited[minNode]:\n",
+    "                        minNode = node\n",
+    "                if minNode is None:\n",
+    "                    break\n",
+    "            nodes.remove(minNode)\n",
+    "            currentWeight = visited[minNode]\n",
+    "            \n",
+    "            for edge in graph.edge[minNode]:\n",
+    "                weight = currentWeight + graph.weights[(minNode, edge)]\n",
+    "                if edge not in visited or weight < visited[edge]:\n",
+    "                        visited[edge] = weight\n",
+    "                        path[edge].append(minNode)\n",
+    "        return visited, path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "86fca987",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g.edges"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "657bdf4c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g.weights"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "48b8bb67",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g.nodes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "b22157d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'g' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-16-8b15886533d0>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mmy_dijkstra_algo\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mg\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"A\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'g' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "my_dijkstra_algo(g, \"A\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d52586f",
    "metadata": {},
    "outputs": [],
    "source": []
